--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     <main>
         <h1 class="main-title">Labas</h1>
-        <p id="first">1 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore quam molestias nihil soluta temporibus? Id eligendi necessitatibus saepe dolor voluptates velit, dolore placeat, impedit cum ea eaque ex, non inventore?</p>
-        <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, in inventore. Voluptatum, eveniet sed enim, vero a, ratione iste recusandae fugiat rem aperiam tenetur odit ducimus nostrum necessitatibus inventore velit!</p>
-        <p>3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente tempora quae voluptas illo dolor minima culpa reiciendis vitae, aperiam delectus recusandae voluptatibus minus aspernatur illum rerum, dignissimos voluptatum commodi. Earum.</p>
+        <p id="first">1 Lorem ipsum dolor, sit amet. 1</p>
+        <p>2 Lorem ipsum dolor sit amet.2 </p>
+        <p>3 Lorem ipsum dolor sit amet.3</p>
     </main>
     <footer>
         <h1 class="main-title">Paskutinis h1</h1>
