--- a/todo/index.html
+++ b/todo/index.html
@@ -10,9 +10,8 @@
 </head>
 
 <body>
-
     <main>
-        <h1>Task planner</h1>
+        <h1>Task planner (0)</h1>
 
         <form class="form">
             <label for="task">Task</label>
@@ -20,18 +19,18 @@
             <button type="submit">Add</button>
         </form>
 
-         <div class="list">
-    <!--    <div class="item">
+        <div class="list">
+            <!-- <div class="item">
                 <div class="header">
                     <div class="index">1</div>
                     <button class="btn" type="button">Delete</button>
                 </div>
-                <div class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius cupiditate vitae, expedita tempore voluptate optio iure nisi saepe quod consectetur similique maxime. Quia, nemo impedit voluptatum necessitatibus cumque harum animi.</div>
+                <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptate sit, eius quo tempore neque totam similique reiciendis reprehenderit commodi natus quis illo soluta dolor ipsa architecto repellat blanditiis accusantium?</div>
             </div> -->
         </div>
     </main>
 
-    <script src="../js/todo.js"></script>
+    <script src="../js/todo.js" type="module"></script>
 </body>
 
 </html>
