--- a/spalvos/index.html
+++ b/spalvos/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="../css/main.css">
 
 <body>
-    <h1>Spalvos</h1>    
+    <header class="main-header">
+        <nav>
+            <a href="../">Main</a>
+            <a href="../cards/">Cards</a>
+            <a href="../darzas/">Darzas</a>
+            <a href="../plus-1/">Plus 1</a>
+            <a href="../spalvos/">Spalvos</a>
+            <a href="../add-block/">Add block</a>
+            <a href="../add-todo/">Add todo</a>
+            <a href="../todo/">Todo</a>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Spalvos</h1>    
 
     <ul class="colors">
         <li>aaaaa</li>
@@ -15,6 +29,8 @@
         <li>cccccccc</li>
     </ul>
 
+    </main>
+    
     <script src="../js/spalvos.js"></script>
 </body>
 
