--- a/darzas/index.html
+++ b/darzas/index.html
@@ -19,7 +19,7 @@
             <a href="../add-block/">Add block</a>
             <a href="../add-todo/">Add todo</a>
             <a href="../todo/">Todo</a>
-            
+             <a href="../krepsinis/">Krepsinis</a>
         </nav>
     </header>
 
