--- a/spalvos/index.html
+++ b/spalvos/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/main.css">
+   
 
 <body>
     <header class="main-header">
@@ -17,6 +18,7 @@
             <a href="../add-block/">Add block</a>
             <a href="../add-todo/">Add todo</a>
             <a href="../todo/">Todo</a>
+            <a href="../krepsinis/">Krepsinis</a>
         </nav>
     </header>
 
